--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 08:35:29</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 09:15:26</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -166,7 +166,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu, pecenymi bataty, lilky, paprikami, arasidy a kokosovym mlekem, jasminova ryze 139</li><li>Peceny filet z cerstveho morcaka stribriteho a norskeho lososa se citronovo-zazvorovou jogurtovou omackou, pecene brambory, salatek 169</li><li>Wrap s nudlickami krutich prsou, rajcaty a ledovym salatem, pecene brambory, jogurtovy bylinkovy dip, salatek 139 (L)</li><li>Grilovane medailonky z hoveziho orechu {US angus} s houbovou omackou, bramborove placky s krupkami, salatek 175 (L)</li><li>Bramborove gnocchi s gorgonzollou, smetanou a pecenou maslovou dyni, salatek 139 (L)</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se syrskymi bio olivami a petrzelkovym pestem, hrachove kari s rajcaty a zazvorem, salatek 139</li><li>Peceny filet z cerstve norske tresky se syrskymi bio olivami a petrzelkovym pestem, hrachove kari s rajcaty a zazvorem, salatek 169</li><li>Thajske pikantni restovane veprove se zelenymi fazolkami, rajcaty, chilli a sazenym vejcem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s jablecnym catny, gratinovane brambory, salatek 169</li><li>Kapustovy rizek s ementalem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
