--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.03.2022 08:35:17</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.03.2022 09:13:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -94,7 +94,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se syrskymi bio olivami a petrzelkovym pestem, hrachove kari s rajcaty a zazvorem, salatek 139</li><li>Peceny filet z cerstve norske tresky se syrskymi bio olivami a petrzelkovym pestem, hrachove kari s rajcaty a zazvorem, salatek 169</li><li>Thajske pikantni restovane veprove se zelenymi fazolkami, rajcaty, chilli a sazenym vejcem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s jablecnym catny, gratinovane brambory, salatek 169</li><li>Kapustovy rizek s ementalem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s citronem a ancovickovym dresinkem, cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstveho morskeho vlka s citronem a ancovickovym dresinkem, cockovy salat s paprikami a zeleninou 175</li><li>Malajsky hovezi rendang s kokosovym mlekem,  zazvorem, limetkovymi listky a vonavym korenim, jasminova ryze, salatek 139</li><li>Italske rizoto s gorgonzolou, susenymi rajcaty a uzenym veprovym jazykem, salatek 165</li><li>Maghrebska zapecena saksuka s rajcaty, vejci, bylinkami a balkanskym syrem, kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
