--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.03.2022 13:58:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.03.2022 06:10:42</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 22. 03. 2022</h5>
+<h5>Středa, 23. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Bramborová se zeleninou a vepřovým masem</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 22.3.2022</div>
+<div class="nadpis">Středa 23.3.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Makovec s citrónovou polevou</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Tiramisu</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Uzený vývar s kroupami a vajíčkem- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Uzený vývar s kroupami a vajíčkem- v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná žampiony, houbová omáčka, pečené grenaillle, polníček, ředkvička <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, karamelizovaná cibule, bramborovo-batátové pyré, pažitka</div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Cizrnové ragú s červenou řepou, rozinky, jasmínová rýže, koriandr, sezam <em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,19 +63,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový krém s bramborovým chipsem a šlehačkou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Steak z vepřové pečeně s ananasem gratinovaný sýrem, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na houbách, kynuté houskové knedlíky </td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské vepřové rizoto se zeleninou, strouhaný sýr, kyselá okurka </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s klobásou a červenou cibulí, grilované brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 200g Steak z kuřecích prsou na roštu, grilovaná zelenina s bazalkovým pestem, celerové pyré s máslem a sýrem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Do růžova pečená vepřová panenka na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pečené baby kuřátko plněné petrželkovou nádivkou, grilované brambory s kmínem, máslová karotka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený citrónovo-majonézovým dresinkem, filírovaná kuřecí prsa, vařené vjce</td><td class="menuPrice">137,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Plněné bramborové knedlíky uzeným masem, dušené bílé zelí, cibulka se škvarky na sádle</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky </td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s kukuřicí, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a cibulí, naše bramboráčky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka s květákovým pyré sypané parmazánem, grilovaná karotka, vařené vejce</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné kari omáčce, smažené hranolky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát promíchaný olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">139,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vyšlehaný vanilkový krém s griliašem a mandlemi, smažené slzy v cukru zakápnuté olivovým olejem </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -121,45 +86,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount"></td>
-<td class="title">Grilované papriky v česnekovém olivovém oleji s ricottou
-a bazalkou, rozpečená bylinková bageta 1a,3,7</td>
-<td class="pricem">145 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Polévka Tom Yum Goong s krevetami
-(rajčata, hlíva ústřičná, koriandr, kokosové mléko) 4,5,6,9</td>
-<td class="pricem">99 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Presovaný vepřový bůček v teriyaki omáčce s grilovaným salátem
-Pak choi a jasmínovou rýží 6,12</td>
-<td class="pricem">205 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Jehněčí burger se sýrem Cheddar, vídeňskou cibulkou,
-smaženými bramborovými lupínky a chipotle majonézou
-1a,3,7,10,11</td>
-<td class="pricem">235 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Italské tiramisu 1a,3,7,8a</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Kuřecí PHO s jarní cibulkou a vaječnými nudlemi 1a,3,6,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí roštěná na hříbkách s jasmínovou rýží 1a,7</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí medailonky balené v šunce v těstíčku s cibulovými brambory s pažitkou a okurkovým salátem 1a,3,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Variace trhaných salátů s parmskou šunkou, Cantaloupe melounem, cherry rajčaty, mrkví, bagetovými chipsy a rybízovou balsamocovou redukcí 1a,3,7,12</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Gulášová z hovězího krku s brambory 1a</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Konfitované kachní stehno s červeným zelím a variací knedlíků 1a,3,7,12</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Grilované filátko z hejka s bylinkovým máslem, grilovanou cuketou a tomatovými brambory Grenaille s chilli a česnekem 4,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Plněné cannelloni špenátem se smetanovou omáčkou z Gorgonzoly, rukolovými listy a vlašskými ořechy 1a,3,7,8c</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
